add an inline style to the p element

--- a/bio.html
+++ b/bio.html
@@ -12,7 +12,7 @@
 
 		<img src="http://scontent.cdninstagram.com/t51.2885-15/s480x480/e35/c0.0.1079.1079/18809119_1689017501393036_1889673588902985728_n.jpg">
 
-		<p>
+		<p style="font-family: sans-serif;">
 		Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time Super awesome thing followed by other super-duper-cool stuff on and on forever until the end of time
 		</p>
 
